Murphy System/outputs/workspace_output_1769374059_2760.txt
  File "/workspace/murphy_backend_complete.py", line 2723
    """Get LLM system status."""
                             ^
SyntaxError: unterminated triple-quoted string literal (detected at line 2766)
